--- a/ipu/templates/faculty/home.html
+++ b/ipu/templates/faculty/home.html
@@ -35,6 +35,23 @@
 	{% url 'edit_create_faculty' %}
 {% endblock %}
 
+{% block lightbox_data %}
+        <div id="light3" class="white_content3">
+			<h4 style="color: goldenrod;">Notify All Students</h4>
+			<form method='POST' action="#!" id="notify-session-students-form">
+					{% csrf_token %}
+					{% form form=notify_session_students_form %}{% endform %}
+					<div class="row center">
+						<button class="btn btn-waves" style="width: 100%">Submit</button>
+					</div>
+			</form>
+            <a href = "javascript:void(0)" onclick = "document.getElementById('light3').style.display='none'; document.getElementById('fade3').style.display='none'; "><i class="fa fa-times fa-2x"></i></a>
+        </div>
+        <div id="fade3" class="black_overlay3"></div>
+
+ {% endblock %}
+
+
 {% block menu_icon_dropdown %}
     {% if perms.recruitment.handle_placement %}
 	<li><a href="{% url 'manage_dcompany' %}" >Manage Dummy Company</a></li>
