--- a/ipu/static/college/home.css
+++ b/ipu/static/college/home.css
@@ -30,3 +30,68 @@
     {
       margin-top: 10px;
     }
+
+
+  @media (min-width:300px) and (orientation: portrait){
+
+    .white_content3 {
+      display: none;
+      justify-content: center;
+      align-items: center;
+      position: fixed;
+      top: 2.5%;
+      left: 2.5%;
+      width: 95%;
+      height: 95%;
+      border: 1px solid black;
+      background-color: #e6e6e6;
+      z-index:1002;
+      overflow: auto;
+      color: black;
+      flex-direction: column;
+      padding: 5px;
+      font-size: 12px;
+      border-radius: 2%;
+    }
+
+    button
+    {
+      margin-top: 5px;
+    }
+  
+  }
+
+  @media (min-width:300px) and (max-width:992px) and (orientation: landscape) {
+
+    .white_content3 {
+      display: none;
+      justify-content: center;
+      align-items: center;
+      position: fixed;
+      top: 2.5%;
+      left: 2.5%;
+      width: 95%;
+      height: 95%;
+      border: 1px solid black;
+      background-color: #e6e6e6;
+      z-index:1002;
+      overflow: auto;
+      color: black;
+      flex-direction: column;
+      padding: 5px;
+      font-size: 12px;
+      padding-top: 20px;
+      border-radius: 2%;
+    }
+
+    #light3 h4
+    {
+      margin-top: 150px;
+    }
+
+    button
+    {
+      margin-top: 5px;
+    }
+
+  }
